Divide into module dependecy
Add dependency build of dmaapClients and aaiClients.
This modules are mandatory to prh application.

Issue-ID: DCAEGEN2-407

Change-Id: I2150a15d76e81dd01503f44339ddb3c50f5b0348
Signed-off-by: wasala <przemyslaw.wasala@nokia.com>